--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,7 @@ $bgColor: (
   card-item: #555
 );
 $borderColor: (
+  nav-menu: linear-gradient(to right, hsl(220, 100%, 60%) 0%, hsl(10, 100%, 60%) 100%),
   tag-pool: #666
 );
 $shadowColor: (
