--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -11,7 +11,7 @@ body {
   z-index: 0;
   
   #nav-slider {
-    padding: 2vh 0; // percentage uses parent's width
+    padding: 0 0 1.4rem 0; // percentage uses parent's width
     width: elementSize(nav-width);
     height: 100%;
     position: absolute;
@@ -24,6 +24,14 @@ body {
       height: 100%;
       background-color: bgColor(nav);
       z-index: 10;
+      
+      &:before {
+        display: block;
+        content: "";
+        width: 100%;
+        height: 0.1rem;
+        background-image: borderColor(nav-menu);
+      }
     }
   }
   
