--- a/css/main.scss
+++ b/css/main.scss
@@ -24,7 +24,7 @@ $elementSize: (
   board-content-width: percentage(1 - $sideWidth),
   tag-pool-width: percentage($poolWidth),
   tag-list-width: 90%,
-  tag-item-font: 1.1rem,
+  tag-item-font: 1rem,
   tag-item-line: 2,
   card-pool-width: percentage(1 - $poolWidth),
   card-list-width: 90%,
@@ -41,7 +41,7 @@ $bgColor: (
   body: rgba(70, 70, 70, 1),
   nav: rgba(85, 85, 85, 0.2),
   slider: rgba(50, 50, 50, 0.2),
-  tag-button: linear-gradient(145deg, #0fb8ad 40%, #1fc8db 50%, #2cb5e8 60%),
+  tag-button: linear-gradient(145deg, hsla(176, 85%, 40%, 0.5) 40%, hsla(186, 75%, 50%, 1) 50%, hsla(186, 75%, 50%, 0.5) 60%),
   tag-button-hover: linear-gradient(to right, #fff, #fff),
   card-item: #555
 );
