--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,9 +5,27 @@ layout: default
 
   <nav id="nav-slider">
   
-    <menu id="nav-menu">
+    <div id="brand-place">
       
-    </menu>
+    </div>
+  
+    <ul id="nav-menu">
+      <li class="nav-menu-item">
+        <a href="">Home</a>
+      </li>
+      <li class="nav-menu-item">
+        <a href="">Menu 1</a>
+      </li>
+      <li class="nav-menu-item">
+        <a href="">Menu 2</a>
+      </li>
+      <li class="nav-menu-item">
+        <a href="">Menu 3</a>
+      </li>
+      <li class="nav-menu-item">
+        <a href="">Menu 4</a>
+      </li>
+    </ul>
     
   </nav>
   
