--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -11,26 +11,47 @@ body {
   z-index: 0;
   
   #nav-slider {
-    padding: 0 0 0.6rem 0; // percentage uses parent's width
     width: elementSize(nav-width);
-    height: 100%;
+    height: 98%;
+    background-color: bgColor(nav);
     position: absolute;
     left: elementSize(nav-width);
     transition: all #{ 800 * $durationMulti }ms ease-out;
     z-index: 5;
     
+    #brand-place {
+      width: 100%;
+      height: 20%;
+    }
+    
     #nav-menu {
+      list-style-type: none;
       width: 100%;
       height: 100%;
-      background-color: bgColor(nav);
       z-index: 10;
       
-      &:before {
-        display: block;
-        content: "";
+      .nav-menu-item {
         width: 100%;
-        height: 0.1rem;
-        background-image: borderColor(nav-menu);
+        border-bottom: thin solid rgba(0, 0, 0, 0.2);
+        
+        a {
+          text-decoration: none;
+          font-family: Quattrocento Sans;
+          font-weight: 100;
+          font-size: elementSize(nav-menu-item-font);
+          line-height: elementSize(nav-menu-item-line);
+          padding: 0 2rem;
+        }
+        
+        &:first-child{
+          &:before {
+            display: block;
+            content: "";
+            width: 100%;
+            height: 0.1rem;
+            background-image: borderColor(nav-menu);
+          }
+        }
       }
     }
   }
