--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -59,7 +59,7 @@ body {
   #board-slider {
     width: 100%;
     height: 100%;
-    background-color: darken(bgColor(slider), 10%);
+    background-color: bgColor(slider);
     position: absolute;
     transition: all #{ 800 * $durationMulti }ms ease-out;
     z-index: 10;
