--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -73,6 +73,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: bgColor(slider);
+    box-shadow: 0px 0px 0.5rem 0.1rem black;
     position: absolute;
     transition: all #{ 800 * $durationMulti }ms ease-out;
     z-index: 10;
@@ -97,6 +98,7 @@ body {
       #card-pool {
         width: elementSize(card-pool-width);
         // @include show-border();
+        box-shadow: 0px 0px 0.5rem 0.3rem black;
         position: absolute;
         left: elementSize(tag-pool-width);
       }
