--- a/_sass/items_tag.scss
+++ b/_sass/items_tag.scss
@@ -22,6 +22,7 @@
   background-size: 100%;
   background-position: -35vw;
   border-radius: 0.2rem;
+  box-shadow: 0px 0px 0.5rem 0.2rem black;
   opacity: 0.9;
   position: relative;
   animation: 1.6s ease-out 0s raySweep;
