--- a/css/main.scss
+++ b/css/main.scss
@@ -38,7 +38,9 @@ $fontColor: (
   body: #48a770,
   nav-menu: hsla(186, 75%, 50%, 0.5),
   tag-button: #fff,
-  tag-button-hover: #f59393
+  tag-button-hover: #f59393,
+  card-title: rgba(80, 80, 80, 0.9),
+  card-title-hover: rgba(50, 50, 50, 1)
 );
 $bgColor: (
   body: rgba(70, 70, 70, 1),
