--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@ layout: default
   
     <ul id="nav-menu">
       <li class="nav-menu-item">
-        <a href="">Home</a>
+        <i class="fa fa-chevron-right"></i><a href="">Home</a>
       </li>
       <li class="nav-menu-item">
         <a href="">Menu 1</a>
