--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,41 +33,42 @@ layout: default
     <div id="board-content">
 
       <div id="tag-pool">
-        <ul id="tag-list">
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-all"></input>
-            <label for="tag-all">*</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-maxscript"></input>
-            <label for="tag-maxscript"><i class="fa fa-hashtag"></i> Maxscript</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-gmod"></input>
-            <label for="tag-gmod"><i class="fa fa-hashtag"></i> Garry's Mod</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-chrome"></input>
-            <label for="tag-chrome"><i class="fa fa-hashtag"></i> Chrome Extension</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-life"></input>
-            <label for="tag-life"><i class="fa fa-hashtag"></i> Life</label>
-          </li>
-          <li class="tag-item">
-            <input type="checkbox" class="tag-item-input" id="tag-tutorial"></input>
-            <label for="tag-tutorial"><i class="fa fa-hashtag"></i> Tutorial</label>
-          </li>
-        </ul>
+        <!-- <ul id="tag-list"> -->
+          <!-- <li class="tag-item"> -->
+            <!-- <input type="checkbox" class="tag-item-input" id="tag-all"></input> -->
+            <!-- <label for="tag-all">*</label> -->
+          <!-- </li> -->
+          <!-- <li class="tag-item"> -->
+            <!-- <input type="checkbox" class="tag-item-input" id="tag-maxscript"></input> -->
+            <!-- <label for="tag-maxscript"><i class="fa fa-hashtag"></i> Maxscript</label> -->
+          <!-- </li> -->
+          <!-- <li class="tag-item"> -->
+            <!-- <input type="checkbox" class="tag-item-input" id="tag-gmod"></input> -->
+            <!-- <label for="tag-gmod"><i class="fa fa-hashtag"></i> Garry's Mod</label> -->
+          <!-- </li> -->
+          <!-- <li class="tag-item"> -->
+            <!-- <input type="checkbox" class="tag-item-input" id="tag-chrome"></input> -->
+            <!-- <label for="tag-chrome"><i class="fa fa-hashtag"></i> Chrome Extension</label> -->
+          <!-- </li> -->
+          <!-- <li class="tag-item"> -->
+            <!-- <input type="checkbox" class="tag-item-input" id="tag-life"></input> -->
+            <!-- <label for="tag-life"><i class="fa fa-hashtag"></i> Life</label> -->
+          <!-- </li> -->
+          <!-- <li class="tag-item"> -->
+            <!-- <input type="checkbox" class="tag-item-input" id="tag-tutorial"></input> -->
+            <!-- <label for="tag-tutorial"><i class="fa fa-hashtag"></i> Tutorial</label> -->
+          <!-- </li> -->
+        <!-- </ul> -->
       </div>
       
       <div id="card-pool">
         <ul id="card-list">
           {% for post in site.posts %}
             <li class="card-item">
-              <img src={{ post.cover }}></img>
+              <!-- <img src={{ post.cover }}></img> -->
+              <div class="overlay"></div>
               <div class="card-info">
-                <h2><a href={{ post.url }}>{{ post.title }}</a></h2>
+                <h3><a href={{ post.url }}>{{ post.title }}</a></h3>
               </div>
             </li>
           {% endfor %}
