--- a/_sass/items_card.scss
+++ b/_sass/items_card.scss
@@ -1,35 +1,42 @@
 
 #card-list {
   list-style-type: none;
-  padding: 0.2rem 0.4rem;
   width: elementSize(card-list-width);
-  background-color: bgColor(slider);
+  // background-color: bgColor(slider);
   position: relative;
 }
 
 .card-item {
   transform: translate3d(0, 0, 0);
-  margin: thin 0;
+  margin-bottom: 4rem;
   width: elementSize(card-item-width);
   height: elementSize(card-item-height);
   // @include show-border();
-  opacity: 0.2;
   position: relative;
   overflow: hidden;
   transition: all #{ 800 * $durationMulti }ms ease-out;
   
-  &:hover {
-    opacity: 1;
+  &:nth-child(even) {
+    margin-left: 8rem;
   }
-  
+
   img {
     width: 100%;
     height: auto;
     position: absolute;
   }
   
-  .card-info {
+  .overlay {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0) 100%);
     position: absolute;
+  }
+  
+  .card-info {
+    margin-top: -4rem;
+    position: absolute;
+    top: 100%;
     
     a {
       @include simple-link(fontColor(card-title), fontColor(card-title-hover));
