--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,32 +33,32 @@ layout: default
     <div id="board-content">
 
       <div id="tag-pool">
-        <!-- <ul id="tag-list"> -->
-          <!-- <li class="tag-item"> -->
-            <!-- <input type="checkbox" class="tag-item-input" id="tag-all"></input> -->
-            <!-- <label for="tag-all">*</label> -->
-          <!-- </li> -->
-          <!-- <li class="tag-item"> -->
-            <!-- <input type="checkbox" class="tag-item-input" id="tag-maxscript"></input> -->
-            <!-- <label for="tag-maxscript"><i class="fa fa-hashtag"></i> Maxscript</label> -->
-          <!-- </li> -->
-          <!-- <li class="tag-item"> -->
-            <!-- <input type="checkbox" class="tag-item-input" id="tag-gmod"></input> -->
-            <!-- <label for="tag-gmod"><i class="fa fa-hashtag"></i> Garry's Mod</label> -->
-          <!-- </li> -->
-          <!-- <li class="tag-item"> -->
-            <!-- <input type="checkbox" class="tag-item-input" id="tag-chrome"></input> -->
-            <!-- <label for="tag-chrome"><i class="fa fa-hashtag"></i> Chrome Extension</label> -->
-          <!-- </li> -->
-          <!-- <li class="tag-item"> -->
-            <!-- <input type="checkbox" class="tag-item-input" id="tag-life"></input> -->
-            <!-- <label for="tag-life"><i class="fa fa-hashtag"></i> Life</label> -->
-          <!-- </li> -->
-          <!-- <li class="tag-item"> -->
-            <!-- <input type="checkbox" class="tag-item-input" id="tag-tutorial"></input> -->
-            <!-- <label for="tag-tutorial"><i class="fa fa-hashtag"></i> Tutorial</label> -->
-          <!-- </li> -->
-        <!-- </ul> -->
+        <ul id="tag-list">
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-all"></input>
+            <label for="tag-all">*</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-maxscript"></input>
+            <label for="tag-maxscript">M</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-gmod"></input>
+            <label for="tag-gmod">GM</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-chrome"></input>
+            <label for="tag-chrome">CE</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-life"></input>
+            <label for="tag-life">L</label>
+          </li>
+          <li class="tag-item">
+            <input type="checkbox" class="tag-item-input" id="tag-tutorial"></input>
+            <label for="tag-tutorial">T</label>
+          </li>
+        </ul>
       </div>
       
       <div id="card-pool">
