--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,6 +67,9 @@ layout: default
             <li class="card-item">
               <!-- <img src={{ post.cover }}></img> -->
               <div class="overlay"></div>
+              <nav class="card-short">
+                <i class="fas fa-bars"></i>
+              </nav>
               <div class="card-info">
                 <h3><a href={{ post.url }}>{{ post.title }}</a></h3>
               </div>
