--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,11 @@
   src: url(/fonts/lato/Lato-Regular.woff);
 }
 
+@font-face {
+  font-family: Daville;
+  src: url(/fonts/daville/Daville-Condensed-Slanted.ttf);
+}
+
 
 // Our variables
 $durationMulti: 1;
