--- a/_sass/items_card.scss
+++ b/_sass/items_card.scss
@@ -1,23 +1,28 @@
 
 #card-list {
   list-style-type: none;
+  padding: 0.5rem;
   width: elementSize(card-list-width);
-  // background-color: bgColor(slider);
+  background-color: bgColor(slider);
+  // background-image: linear-gradient(-45deg, black 5.56%,transparent 5.56%,transparent 50%, black 50%, black 55.56%,transparent 55.56%,transparent 100%);
+  // background-size: 9px 9px;
+  box-shadow: 0px 0px 0.5rem 0.1rem black;
   position: relative;
 }
 
 .card-item {
   transform: translate3d(0, 0, 0);
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
   width: elementSize(card-item-width);
   height: elementSize(card-item-height);
   // @include show-border();
+  box-shadow: 0px 0px 0.5rem 0.1rem black;
   position: relative;
   overflow: visible;
   transition: all #{ 800 * $durationMulti }ms ease-out;
   
   &:nth-child(even) {
-    margin-left: 7rem;
+    // margin-left: 7rem;
   }
 
   img {
@@ -29,11 +34,26 @@
   .overlay {
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(100deg, rgba(0, 0, 0, 0.5) 10%, rgba(0, 0, 0, 0) 100%);
+    background-image: linear-gradient(100deg, rgba(50, 50, 55, 0.3) 10%, rgba(0, 0, 0, 0) 100%);
     position: absolute;
   }
   
+  nav {
+    width: 1.5rem;
+    height: 1.5rem;
+    border-right: thin solid black;
+    border-bottom: thin solid black;
+    
+    i {
+      display: block;
+      text-align: center;
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+  }
+  
   .card-info {
+    font-family: Daville;
     margin-left: 2rem;
     position: absolute;
     top: 65%;
