--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -11,7 +11,8 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-color: bgColor(body);
+  // background-color: bgColor(body);
+  background-color: rgba(12, 10, 30, 1);
 }
 
 div, nav, menu, ol, ul, li {
