--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -62,6 +62,8 @@ body {
     width: 100%;
     height: 100%;
     background-color: bgColor(slider);
+    // background-image: linear-gradient(-45deg, black 5.56%,transparent 5.56%,transparent 50%, black 50%, black 55.56%,transparent 55.56%,transparent 100%);
+    // background-size: 9px 9px;
     box-shadow: 0px 0px 0.5rem 0.1rem black;
     position: absolute;
     transition: all #{ 800 * $durationMulti }ms ease-out;
