--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,19 +13,19 @@ layout: default
   
     <ul id="nav-menu">
       <li class="nav-menu-item">
-        <i class="fa fa-home"></i><a href="">Home</a>
+        <i class="fas fa-home"></i><a href="">Home</a>
       </li>
       <li class="nav-menu-item">
-        <i class="fa fa-chevron-right"></i><a href="">Menu 1</a>
+        <i class="fas fa-chevron-right"></i><a href="">Menu 1</a>
       </li>
       <li class="nav-menu-item">
-        <i class="fa fa-chevron-right"></i><a href="">Menu 2</a>
+        <i class="fas fa-chevron-right"></i><a href="">Menu 2</a>
       </li>
       <li class="nav-menu-item">
-        <i class="fa fa-chevron-right"></i><a href="">Menu 3</a>
+        <i class="fas fa-chevron-right"></i><a href="">Menu 3</a>
       </li>
       <li class="nav-menu-item">
-        <i class="fa fa-chevron-right"></i><a href="">Menu 4</a>
+        <i class="fas fa-chevron-right"></i><a href="">Menu 4</a>
       </li>
     </ul>
     
@@ -63,16 +63,14 @@ layout: default
         </ul>
       </div>
       
-      <div id="card-pool">
-        <ul id="card-list">
+      <div id="article-pool">
+        <ul id="article-list">
           {% for post in site.posts %}
-            <li class="card-item">
-              <!-- <img src={{ post.cover }}></img> -->
-              <div class="overlay"></div>
-              <nav class="card-short">
+            <li class="article-item">
+              <nav class="article-shortcut">
                 <i class="fas fa-bars"></i>
               </nav>
-              <div class="card-info">
+              <div class="article-info">
                 <h3><a href={{ post.url }}>{{ post.title }}</a></h3>
               </div>
             </li>
