--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -11,8 +11,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  // background-color: bgColor(body);
-  background-color: rgba(12, 10, 30, 1);
+  background-color: bgColor(body);
 }
 
 div, nav, menu, ol, ul, li {
