--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -42,7 +42,7 @@ body {
           line-height: elementSize(nav-menu-item-line);
           padding: 0 1.5rem;
           
-          @include simple-link(fontColor(nav-menu), fontColor(tag-button-hover));
+          @include simple-link(fontColor(nav-menu), fontColor(nav-menu-hover));
         }
         
         &:first-child {
@@ -62,7 +62,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: bgColor(slider);
-    // background-image: linear-gradient(-45deg, black 5.56%,transparent 5.56%,transparent 50%, black 50%, black 55.56%,transparent 55.56%,transparent 100%);
+    // background-image: linear-gradient(-45deg, black 5.56%, transparent 5.56%, transparent 50%, black 50%, black 55.56%, transparent 55.56%, transparent 100%);
     // background-size: 9px 9px;
     box-shadow: 0px 0px 0.5rem 0.1rem black;
     position: absolute;
@@ -78,16 +78,13 @@ body {
       transition: all #{ 800 * $durationMulti }ms ease-out;
       
       #tag-pool {
-        padding: 0 0.3rem 0 0;
         width: elementSize(tag-pool-width);
-        height: auto;
-        // it seems height:auto needs position:relative elements have something below them
         position: absolute;
         overflow: hidden;
       }
       
-      #card-pool {
-        width: elementSize(card-pool-width);
+      #article-pool {
+        width: elementSize(article-pool-width);
         position: absolute;
         left: elementSize(tag-pool-width);
       }
