--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
   </nav>
   
   <div id="board-slider">
-    <div id="board-content">
+    <div id="board-wrapper">
 
       <div id="tag-pool">
         <ul id="tag-list">
