--- a/_sass/items_article.scss
+++ b/_sass/items_article.scss
@@ -29,6 +29,7 @@
       text-align: center;
       font-size: 1rem;
       line-height: 1.5;
+      color: fontColor(article-shortcut);
     }
   }
   
