--- a/css/main.scss
+++ b/css/main.scss
@@ -45,7 +45,8 @@ $fontColor: (
   tag-button: rgba(255, 255, 255, 0.9),
   tag-button-hover: rgba(245, 147, 147, 0.9),
   article-title: rgba(80, 80, 80, 0.9),
-  article-title-hover: rgba(50, 50, 50, 1)
+  article-title-hover: rgba(50, 50, 50, 1),
+  article-shortcut: rgba(255, 255, 255, 0.95)
 );
 $bgColor: (
   body: rgba(12, 10, 30, 1),
@@ -56,7 +57,7 @@ $bgColor: (
 $borderColor: (
   nav-menu: linear-gradient(to right, hsl(220, 100%, 60%) 0%, hsl(10, 100%, 60%) 100%),
   nav-menu-item: rgba(0, 0, 0, 0.2),
-  article-shortcut: rgba(0, 0, 0, 1)
+  article-shortcut: rgba(0, 0, 0, 0.8)
 );
 
 
