--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -36,13 +36,18 @@ body {
         border-bottom: thin solid borderColor(nav-menu-item);
         
         a {
+          display:block;
           font-family: Quattrocento Sans;
           font-weight: 100;
           font-size: elementSize(nav-menu-item-font);
           line-height: elementSize(nav-menu-item-line);
-          padding: 0 1.5rem;
           
           @include simple-link(fontColor(nav-menu), fontColor(nav-menu-hover));
+          
+          i {
+            text-align: center;
+            width: 3rem;
+          }
         }
         
         &:first-child {
