--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,19 +13,19 @@ layout: default
   
     <ul id="nav-menu">
       <li class="nav-menu-item">
-        <a href=""><i class="fas fa-home"></i>Home</a>
+        <a href=""><i class="fas fa-home"></i><span>Home</span></a>
       </li>
       <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i>Menu 1</a>
+        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 1</span></a>
       </li>
       <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i>Menu 2</a>
+        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 2</span></a>
       </li>
       <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i>Menu 3</a>
+        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 3</span></a>
       </li>
       <li class="nav-menu-item">
-        <a href=""><i class="fas fa-chevron-right"></i>Menu 4</a>
+        <a href=""><i class="fas fa-chevron-right"></i><span>Menu 4</span></a>
       </li>
     </ul>
     
