--- a/_sass/items_article.scss
+++ b/_sass/items_article.scss
@@ -33,7 +33,7 @@
     }
   }
   
-  .article-info {
+  .article-info h3 {
     font-family: Daville;
     margin-left: 2rem;
     position: absolute;
