--- a/css/main.scss
+++ b/css/main.scss
@@ -41,7 +41,8 @@ $elementSize: (
 $fontColor: (
   body: #fff,
   nav-menu: hsla(186, 75%, 50%, 0.4),
-  nav-menu-hover: rgba(245, 147, 147, 0.9),
+  nav-menu-hover: rgba(255, 255, 255, 1),
+  nav-menu-icon: rgba(255, 255, 255, 0.85),
   tag-button: rgba(255, 255, 255, 0.9),
   tag-button-hover: rgba(245, 147, 147, 0.9),
   article-title: rgba(80, 80, 80, 0.9),
