--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -56,12 +56,12 @@ body {
           }
           
           span {
-            font-family: Quattrocento Sans;
+            font-family: Lato;
             font-weight: 100;
             font-size: elementSize(nav-menu-item-font);
             line-height: elementSize(nav-menu-item-line);
             color: fontColor(nav-menu);
-            padding: 1rem;
+            padding: 0.8rem;
           }
         }
         
