--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
   <nav id="nav-slider">
   
     <div id="nav-brand">
-      
+      <img src="/images/logo/logo-pw.svg">
     </div>
   
     <ul id="nav-menu">
