--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -22,7 +22,18 @@ body {
     
     #nav-brand {
       width: 100%;
-      height: 20%;
+      height: 30%;
+      position: relative;
+      
+      img {
+        transform: rotateX(180deg);
+        width: 35%;
+        height: auto;
+        border: thin solid pink;
+        position: absolute;
+        top: 45%;
+        left: 1rem;
+      }
     }
     
     #nav-menu {
