--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -12,26 +12,25 @@ body {
   z-index: 0;
   
   #nav-slider {
-    width: elementSize(nav-width);
-    height: 98%;
+    width: elementSize(nav-width) - 1%;
+    height: 100%;
     background-color: bgColor(nav);
     position: absolute;
-    left: elementSize(nav-width);
+    left: 1%;
     transition: all #{ 800 * $durationMulti }ms ease-out;
     z-index: 5;
     
     #nav-brand {
       width: 100%;
-      height: 30%;
+      height: 16%;
       position: relative;
       
       img {
         transform: rotateX(180deg);
-        width: 35%;
-        height: auto;
-        border: thin solid pink;
+        width: auto;
+        height: elementSize(logo-height);
         position: absolute;
-        top: 45%;
+        top: (100% -  elementSize(logo-height));
         left: 1rem;
       }
     }
@@ -40,6 +39,7 @@ body {
       list-style-type: none;
       width: 100%;
       height: 100%;
+      border-top: thin solid borderColor(nav-menu);
       z-index: 10;
       
       .nav-menu-item {
@@ -75,16 +75,6 @@ body {
             padding: 0.8rem;
           }
         }
-        
-        &:first-child {
-          &:before {
-            display: block;
-            content: "";
-            width: 100%;
-            height: 0.1rem;
-            background-image: borderColor(nav-menu);
-          }
-        }
       }
     }
   }
@@ -95,7 +85,7 @@ body {
     background-color: bgColor(slider);
     // background-image: linear-gradient(-45deg, black 5.56%, transparent 5.56%, transparent 50%, black 50%, black 55.56%, transparent 55.56%, transparent 100%);
     // background-size: 9px 9px;
-    box-shadow: 0px 0px 0.5rem 0.1rem black;
+    box-shadow: 0px 0px 0.5rem 0.02rem black inset;
     position: absolute;
     transition: all #{ 800 * $durationMulti }ms ease-out;
     z-index: 10;
@@ -110,12 +100,14 @@ body {
       
       #tag-pool {
         width: elementSize(tag-pool-width);
+        height: 100%;
         position: absolute;
         overflow: hidden;
       }
       
       #article-pool {
         width: elementSize(article-pool-width);
+        height: 100%;
         position: absolute;
         left: elementSize(tag-pool-width);
       }
